@@ -3,6 +3,7 @@
 	* Fixed piVars initialisation when going back from error page
 	* Added new option to send empty values (and markers) in emails
 	* Fixed labels.allowTags at is was broken due to security update
+	* Force absolute links in email texts
 
 2012-08-18 Nicole Cordes <cordes@cps-it.de>
 
